# SpiderKeeper

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  DaemonService.py  DamonService.py  Dockerfile  Gruntfile.js  LICENSE.txt  MANIFEST.in  README.md  SKMonitor.py  SKWebService.py  ScheduleMonitor.py  SpiderKeeper.db  bower.json  config.py  launch.py  package.json  pyproject.toml  requirements.txt  run.py  setup.py  start.sh
.tmp/styles/: main.css
SpiderKeeper/: __init__.py  command.py  config.py  run.py  uwsgi.py
SpiderKeeper/app/: __init__.py  config.py
SpiderKeeper/app/extensions/: sqlalchemy.py
SpiderKeeper/app/proxy/: __init__.py  spiderctrl.py
SpiderKeeper/app/schedulers/: common.py
SpiderKeeper/app/spider/: controller.py  model.py
SpiderKeeper/app/templates/: base.html  index.html  job_dashboard.html  job_detail.html  job_items.html  job_log.html  job_periodic.html  (+7 more)
SpiderKeeper/scheduler/: __init__.py  jobs.py
SpiderKeeper/scrapyd/: app.py  txapp.py
app/: __init__.py  config.json  index.html
app/proxy/: spiderctrl.py
app/schedulers/: common.py
app/scripts/: app.js  config.js
app/spider/: controller.py  model.py
app/styles/: main.css
app/templates/: base.html  job_dashboard.html  job_periodic.html  service_stats.html  spider_deploy.html
app/util/: http.py
app/views/: dash_job.html  dash_scheduler.html  dash_spider.html  dashboard.html  status.html
dbs/: test1.db
eggs/test1/: 1545728805.egg  1545729911.egg
src/: Gruntfile.js  bower.json  package.json
src/app/: index.html
src/test/: karma.conf.js
test/: karma.conf.js
(+50 files in other folders)
